--- a/templates/jar.html.twig
+++ b/templates/jar.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-        <h1>Counter: {{ number }} <i class="fas fa-coins"></i> | {{ number * 0.20 }} <i class="fas fa-euro-sign"></i></h1>
+        <h1>{{ number }} <i class="fas fa-coins"></i> | {{ number * 0.20 }} <i class="fas fa-euro-sign"></i></h1>
 
         <!--{{ form(addF) }}{{ form(subF) }}-->
 
